# patingin

./: Cargo.toml  LICENSE  README.md  rustfmt.toml  test_file.ex  test_git_diff_debug.rs
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: README.md  ai-integration.md  commands.md  rules.md  setup.md  workflows.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: config.rs  help.rs  init.rs  mod.rs  review.rs  rules.rs  setup.rs  track.rs
src/config/: mod.rs
src/core/: custom_rules.rs  embedded_rules_test.rs  mod.rs  pattern.rs  project_detector.rs  registry.rs  registry_tests.rs  review_engine.rs  review_engine_test.rs
src/git/: diff_parser_debug_test.rs  diff_parser_test.rs  mod.rs
src/rules/builtin/: elixir.yml  javascript.yml  python.yml  rust.yml  sql.yml  typescript.yml  zig.yml
test_files/: clean_code.ex  elixir_violations.ex  example.ex  javascript_violations.js
tests/: documentation_migration_validation.rs  documentation_validation.rs  error_handling_tests.rs  git_error_handling_tests.rs  integration_tests.rs  integration_tests_improved.rs  performance_benchmarks.rs
