[package]
name = "patingin"
version = "0.1.0"
edition = "2021"
authors = ["jeryldev"]
description = "All-seeing code guardian for pull request inspection and anti-pattern detection"
license = "MIT"
repository = "https://github.com/jeryldev/patingin"
keywords = ["code-review", "anti-patterns", "linter", "static-analysis"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
git2 = "0.19"
colored = "2.1"
walkdir = "2.5"
home = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.20"
chrono = "0.4"
glob = "0.3"
tempfile = "3.14"
which = "7.0"
